making about page responsive and func fixes

--- a/gallery.html
+++ b/gallery.html
@@ -63,8 +63,5 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
     <script src="menuPopUp.js"></script>
-    <script src="statistics.js"></script>
-    <script src="gallery.js"></script>
-    <script src="totop.js"></script>
-    <script src="contactForm.js"></script>
+    </body>
         </html>
