Changing the text

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
             <div class="nav-text">
                 <ul>
                     <li><a href="index.html">Начало</a></li>
+                    <li><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
                     <li><a href="gallery.html">Нашата работа</a></li>
                 </ul>
@@ -51,7 +52,7 @@
         
          <div class="about-content">
             <div data-aos="fade-right" class="about-page">
-                <h1><span>BulSauber,</span> водещата компания за професионално почистване с над 7-годишен опит в Германия.</h1>
+                <h1><span>BulSauber,</span> водещата компания за професионално почистване с дългогодишен опит в Германия.</h1>
               
                 <div  class="introduction">
                   <h2>Ние се гордеем с това,</h2>
