--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="nav-text">
                 <ul>
                     <li><a href="index.html">Начало</a></li>
+                    <li><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
                     <li><a href="#gallery">Нашата работа</a></li>
                 </ul>
@@ -57,7 +58,7 @@
                 <h1>BulSauber</h1>
             </div>
 
-           <p>Дълги години професионално почистване в Германия <br> вече и в България!</p>
+           <p>Дългогодишен опит професионално почистване в Германия, <br> сега и в България!</p>
            
            
            <div  class="statistics-border borders-color">
@@ -143,14 +144,14 @@
                     </div>
                     <div class="column">
                         <h2>Детски градини</h2>
-                        <p>Почистване и поддържане на индустриални помещения, заводи, складове, логистични бази, халета и др.</p>
+                        <p>Почистване и поддържане на детски градини и училища.</p>
                     </div>
                     <div class="column">
                         <h2>Частни домове</h2>
                         <p>Предлагаме професионално основно и абонаментно почистване на частни домове. Почистване на всяка част от вашия дом - с мобилен екип.</p>
                     </div>
                     <div class="column">
-                        <h2>Измиване на прозорци</h2>
+                        <h2>Почистване на прозорци</h2>
                         <p>Измиване на витрини, прозорци, преградни стъкла, фасади; Включва измиване на стъкла, дограма, рамки, первази и подпрозоречни рамки.</p>
                     </div>
                     <div class="column">
