--- a/services.html
+++ b/services.html
@@ -29,6 +29,7 @@
             <div class="nav-text">
                 <ul>
                     <li><a href="index.html">Начало</a></li>
+                    <li><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
                     <li><a href="gallery.html">Нашата работа</a></li>
                 </ul>
@@ -79,7 +80,7 @@
                 </div>
                 <div class="column">
                     <h2>Пране на мека мебел</h2>
-                    <p>Машинно изпиране на мека мебел - дивани, кресла, столове, пуфове, тапицирани легла, мокети и др.</p>
+                    <p>Машинно изпиране на мека мебел - дивани, кресла, столове, пуфове, тапицирани легла и др.</p>
                 </div>
                 <div class="column">
                     <h2>Пране на килими</h2>
