--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
             <div class="nav-text">
                 <ul>
                     <li><a href="index.html">Начало</a></li>
+                    <li><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
                     <li><a href="gallery.html">Нашата работа</a></li>
                 </ul>
