Fixing bugs and footer

--- a/gallery.html
+++ b/gallery.html
@@ -52,6 +52,7 @@
             </div>
             <div class="gallery-header">
             <h1>Нашата работа</h1>
+
             </div>
             <div class="stars">
             <i class="bi bi-star-fill"></i>
@@ -59,10 +60,10 @@
             <i class="bi bi-star-fill"></i>
             <i class="bi bi-star-fill"></i>
         </div>
-            <div class="gallery-container">
-                <button id="prev" class="nav-button">←</button>
+            <div class="gallerypage-container">
+                <i id="prev" class="bi bi-arrow-left-short nav-button"></i>
                 <img id="gallery-image" src="" alt="Gallery Image">
-                <button id="next" class="nav-button">→</button>
+                <i id="next" class="bi bi-arrow-right-short nav-button"></i>
             </div>
           
         
