--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header id="gotoheader" class="section-color">
-        <div  class="logo"><img data-aos="fade-right" src="./assets/logo/Original Logo Symbol.png" alt="logo">
+        <a href="index.html"><div  class="logo"><img data-aos="fade-right" src="./assets/logo/Original Logo Symbol.png" alt="logo"></div> </a>
         </div>
         <div class="hamburger-menu">
             <ul id="hidden-menu" >
@@ -28,10 +28,11 @@
         <nav class="nav-section">
             <div class="nav-text">
                 <ul>
-                    <li><a href="index.html">Начало</a></li>
+                    
                     <li><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
                     <li><a href="#gallery">Нашата работа</a></li>
+                    <li><a href="contact.html">Контакт</a></li>
                 </ul>
             </div>
         </nav>
