--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
                 <ul class="menu-links">
                     <li><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
-                    <li><a href="#gallery">Нашата работа</a></li>
+                    <li><a href="gallery.html">Нашата работа</a></li>
     
                     <li><a href="contact.html">Контакт</a></li>
         
