Adding new page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><a href="services.html">Услуги</a></li>
                     <li><a href="#gallery">Нашата работа</a></li>
                     <li><a href="contact.html">Контакт</a></li>
+                    <li><a href="prices.html">Цени</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,9 +45,8 @@
                 <li><a href="about.html">За нас</a></li>
                 <li><a href="services.html">Услуги</a></li>
                 <li><a href="#gallery">Нашата работа</a></li>
-
                 <li><a href="contact.html">Контакт</a></li>
-    
+                <li><a href="prices.html">Цени</a></li>
             </ul>
         </div>
         </div>
